--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <section class="about-text">
           <p>
-            I am a Computer Science and Engineering student persuing my graduation from ABES Engineering College, Ghaziabad. I love to learn new stuff. I know a little bit of android development, web development and data science as well. Currently working on myself. I love to play chess and edit videos. I edit videos for my own youtube channel.
+            I am a Computer Science and Engineering student pursuing my graduation from ABES Engineering College, Ghaziabad. I love to learn new stuff. I know a little bit of android development, web development and data science as well. Currently working on myself. I love to play chess and edit videos. I edit videos for my own youtube channel.
           </p>
 
           
@@ -283,7 +283,7 @@
                 <h4 class="h4 service-item-title">Video Editing</h4>
 
                 <p class="service-item-text">
-                  I love to edit videos. I do it for fun so I am sharpning my skills by editing videos for my own youtube channel.
+                  I love to edit videos. I do it for fun so I am sharpening my skills by editing videos for my own youtube channel.
                 </p>
               </div>
 
