--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               <div class="service-content-box">
                 <h4 class = "h4 service-item-title">Writing</h4>
                 <p class="service-item-text">
-                  I like to document things happening and I enjoying writing in genral. So I write a lot most of the times personal journals but sometimes blogs too.
+                  I like to document things happening and I enjoying writing in general. So I write a lot most of the times personal journals but sometimes blogs too.
                 </p>
               </div>
 
