--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
               <span>2019 — 2023</span>
 
               <p class="timeline-text">
-                B.tech (Computer Science and Engineering)<br>
+                B.Tech (Computer Science and Engineering)<br>
                 Ghaziabad, India.<br>
                 CGPA (Till 5th semester) - 7.9<br>
               </p>
